added "manualinstall" rule to the Makefiles (for users not using findlib)

--- a/src-float/Makefile
+++ b/src-float/Makefile
@@ -1,13 +1,20 @@
-OCAML := ocaml
-OCAMLC := ocamlc -g
-OCAMLOPT := ocamlopt -g
-OCAMLDOC := ocamldoc
-OCAMLFIND := ocamlfind
-VERSION := $(shell date --iso)
+LIBDIR = fease
+OCAML = ocaml
+OCAMLC = ocamlc -g
+OCAMLOPT = ocamlopt -g
+OCAMLDOC = ocamldoc
+OCAMLMKLIB = ocamlmklib
+OCAMLFIND = ocamlfind
+OCAMLDIR = $(shell $(OCAMLC) -where)
+VERSION = $(shell date --iso)
+DESTDIR = $(OCAMLDIR)/$(LIBDIR)
+DOC_DIR = doc
+MKDIR = mkdir -p
 
-OCAML_DIR := $(shell $(OCAMLC) -where)
-DOC_DIR := doc
-MKDIR := mkdir -p
+INSTALL_CMD = install
+INSTALL_FILES = $(INSTALL_CMD) -m 0644
+INSTALL_EXE = $(INSTALL_CMD) -m 0755
+INSTALL_DIR = $(INSTALL_CMD) -d
 
 .PHONY: all lib opt
 all: lib opt
@@ -17,7 +24,7 @@ opt: fEase.cmxa fTimed.cmxa
 .SECONDARY:
 
 %.cmi: %.mli
-	$(OCAMLC) -c -o $@ $<
+	$(OCAMLC) -c $<
 
 %.cmo: %.ml %.cmi
 	$(OCAMLC) -c $<
@@ -43,7 +50,13 @@ META: META.in
 
 .PHONY: findinstall
 findinstall: META fEase.cma
-	$(OCAMLFIND) install fease META *.cm[iax] *.cmx[as] *.mli *.a
+	$(OCAMLFIND) install $(LIBDIR) META *.a *.cm[iatx] *.cmx[as] *.mli
+
+.PHONY: manualinstall
+manualinstall: META fEase.cma
+	$(INSTALL_DIR) $(DESTDIR)
+	$(INSTALL_FILES) META *.a *.cm[iatx] *.cmx[a] *.mli $(DESTDIR)
+	$(INSTALL_EXE) *.cmx[s] $(DESTDIR)
 
 .PHONY: doc
 doc:
@@ -52,8 +65,9 @@ doc:
 
 .PHONY: cleandoc
 cleandoc:
-	$(RM) -r doc
+	$(RM) -r $(DOC_DIR)
 
 .PHONY: clean
 clean:
-	$(RM) *.cm[ioxa] *.[oa] *.cmx[as] *.opt *.exe *.byte
+	$(RM) *.cm[iotxa] *.[oa] *.cmx[as] *.opt *.exe *.byte
+
